--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,8 @@ activityCompose = "1.10.1"
 composeBom = "2024.04.01"
 lottieCompose = "6.4.0"
 retrofit = "3.0.0"
-coil3 = "3.3.0"
+#coil3 = "3.3.0"
+coil = "2.6.0"
 lottie = "6.6.9"
 navigation = "2.9.5"
 room = "2.8.1"
@@ -35,10 +36,11 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 squareup-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 squareup-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 
-coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil3" }
-#coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
+#coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil3" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 
 lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie" }
+androidx-palette-ktx = { module = "androidx.palette:palette-ktx", version = "1.0.0" }
 
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation" }
 
